--- a/index.html
+++ b/index.html
@@ -1,55 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>raster tile</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/ardhi/Leaflet.MousePosition/master/src/L.Control.MousePosition.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js" type="text/javascript"></script>
-    <script src="https://cdn.rawgit.com/ardhi/Leaflet.MousePosition/master/src/L.Control.MousePosition.js" type="text/javascript"></script>
-    <style>
-      html, body, #map { width:100%; height:100%; margin:0; padding:0; z-index: 1; background: #F8F8F1; }
-      #slider{ position: absolute; top: 10px; right: 10px; z-index: 5; }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
-    <!--
-    <input id="slider" type="range" min="0" max="1" step="0.1" value="1" oninput="layer.setOpacity(this.value)"> -->
-    <script type="text/javascript">
-      var mapExtent = [0.00000000, -8333.00000000, 8333.00000000, 0.00000000];
-      var mapMinZoom = 0;
-      var mapMaxZoom = 6;
-      var mapMaxResolution = 1.00000000;
-      var mapMinResolution = Math.pow(2, mapMaxZoom) * mapMaxResolution;
-      var tileExtent = [0.00000000, -8333.00000000, 8333.00000000, 0.00000000];
-      var crs = L.CRS.Simple;
-      crs.transformation = new L.Transformation(1, -tileExtent[0], -1, tileExtent[3]);
-      crs.scale = function(zoom) {
-        return Math.pow(2, zoom) / mapMinResolution;
-      };
-      crs.zoom = function(scale) {
-        return Math.log(scale * mapMinResolution) / Math.LN2;
-      };
-      var layer;
-      var map = new L.Map('map', {
-          maxZoom: mapMaxZoom,
-          minZoom: mapMinZoom,
-          crs: crs
-        });
-        layer = L.tileLayer('{z}/{x}/{y}.png', {
-          minZoom: mapMinZoom, maxZoom: mapMaxZoom,
-          <!-- attribution: 'Rendered with <a href="https://www.maptiler.com/desktop/">MapTiler Desktop</a>', -->
-          noWrap: true,
-          tms: false
-        }).addTo(map);
-      map.fitBounds([
-        crs.unproject(L.point(mapExtent[2], mapExtent[3])),
-        crs.unproject(L.point(mapExtent[0], mapExtent[1]))
-      ]);
-      L.control.mousePosition().addTo(map)
-    </script>
-  </body>
+<head>
+<title>raster tile</title>
+<meta charset="utf-8">
+<meta http-equiv="imagetoolbar" content="no"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<style type="text/css">
+html, body { margin:0; padding: 0; height: 100%; width: 100%; }
+body { width:100%; height:100%; background: #F8F8F1; }
+#map { position: absolute; height: 100%; width: 100%; background-color: #F8F8F1; }
+
+</style>
+<link rel="stylesheet" href="https://cdn.maptiler.com/ol/v5.3.0/ol.css" type="text/css">
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL,fetch,Function.prototype.bind,es5&flags=always,gated&unknown=polyfill" type="text/javascript"></script>
+<script src="https://cdn.maptiler.com/ol/v5.3.0/ol.js" type="text/javascript"></script>
+</head>
+<body>
+<div id="map"></div>
+<input id="slider" type="range" min="0" max="1" step="0.1" value="1" oninput="layer.setOpacity(this.value)">
+<script type="text/javascript">
+var mapExtent = [0.00000000, -8333.00000000, 8333.00000000, 0.00000000];
+var mapMinZoom = 0;
+var mapMaxZoom = 6;
+var mapMaxResolution = 1.00000000;
+var tileExtent = [0.00000000, -8333.00000000, 8333.00000000, 0.00000000];
+
+var mapResolutions = [];
+for (var z = 0; z <= mapMaxZoom; z++) {
+  mapResolutions.push(Math.pow(2, mapMaxZoom - z) * mapMaxResolution);
+}
+
+var mapTileGrid = new ol.tilegrid.TileGrid({
+  extent: tileExtent,
+  minZoom: mapMinZoom,
+  resolutions: mapResolutions
+});
+
+var layer = new ol.layer.Tile({
+  source: new ol.source.XYZ({
+  attributions: 'sanjeetahira@gmail.com',
+    projection: 'PIXELS',
+    tileGrid: mapTileGrid,
+    tilePixelRatio: 1.00000000,
+    url: "{z}/{x}/{y}.png",
+  })
+});
+
+
+
+var map = new ol.Map({
+  target: 'map',
+  layers: [
+    layer,
+  ],
+  view: new ol.View({
+    projection: ol.proj.get('PIXELS'),
+    extent: mapExtent,
+    maxResolution: mapTileGrid.getResolution(mapMinZoom)
+  })
+});
+
+map.getView().fit(mapExtent, map.getSize());
+</script>
+</body>
 </html>
