--- a/index.html
+++ b/index.html
@@ -6,15 +6,54 @@
 <meta http-equiv="imagetoolbar" content="no"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="stylesheet" href="https://cdn.maptiler.com/ol/v5.3.0/ol.css" type="text/css">
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL,fetch,Function.prototype.bind,es5&flags=always,gated&unknown=polyfill" type="text/javascript"></script>
+<script src="https://cdn.maptiler.com/ol/v5.3.0/ol.js" type="text/javascript"></script>
+
 <style type="text/css">
 html, body { margin:0; padding: 0; height: 100%; width: 100%; }
 body { width:100%; height:100%; background: #F8F8F1; }
 #map { position: absolute; height: 100%; width: 100%; background-color: #F8F8F1; }
 
+.ol-zoom {
+    top: 50%;
+    left: auto;
+    right: .5em;
+}
+.ol-control {
+    position: absolute;
+    background-color: #f8f8f1;
+    border-radius: 0px;
+    padding: 1px;
+
+}
+.ol-control button {
+    display: block;
+    margin: 1px;
+    padding: 0;
+    color: #F8F8F1;
+    font-size: 1.5em;
+    font-weight: 700;
+    text-decoration: none;
+    text-align: center;
+    height: 1.5em;
+    width: 1.5em;
+    line-height: .4em;
+    background-color: #00AED0;
+    border: none;
+  }
+  .ol-attribution button, .ol-attribution ul {
+    color: #F8F8F1;
+  }
+  .ol-control button:focus, .ol-control button:hover {
+    text-decoration: none;
+    background-color: #BBD817;
+  }
+    .ol-attribution:not(.ol-collapsed) {
+    background: #F8F8F1;
+  }
 </style>
-<link rel="stylesheet" href="https://cdn.maptiler.com/ol/v5.3.0/ol.css" type="text/css">
-<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL,fetch,Function.prototype.bind,es5&flags=always,gated&unknown=polyfill" type="text/javascript"></script>
-<script src="https://cdn.maptiler.com/ol/v5.3.0/ol.js" type="text/javascript"></script>
+
 </head>
 <body>
 <div id="map"></div>
