--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@ body { width:100%; height:100%; background: #F8F8F1; }
   .ol-attribution button, .ol-attribution ul {
     color: #F8F8F1;
   }
-  .ol-control button:focus, .ol-control button:hover {
-    text-decoration: none;
+  .ol-control button:hover {
+
     background-color: #BBD817;
+  }
+  .ol-control button:focus {
+    background-color: #00AED0;
   }
     .ol-attribution:not(.ol-collapsed) {
     background: #F8F8F1;
