--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body { width:100%; height:100%; background: #F8F8F1; }
 var mapExtent = [0.00000000, -16384.00000000, 16384.00000000, 0.00000000];
 var mapMinZoom = 0;
 var mapMaxZoom = 7;
-var var mapMaxResolution = 0.5;
+var mapMaxResolution = 0.5;
 var tileExtent = [0.00000000, -16384.00000000, 16384.00000000, 0.00000000];
 
 var mapResolutions = [];
