--- a/index.html
+++ b/index.html
@@ -15,38 +15,13 @@ html, body { margin:0; padding: 0; height: 100%; width: 100%; }
 body { width:100%; height:100%; background: #F8F8F1; }
 #map { position: absolute; height: 100%; width: 100%; background-color: #F8F8F1; }
 
-div.ol-zoom {
-    top: calc(50% - 100px);
-    left: auto;
-    right: .5em;
-    background-color: rgba(0,0,0,0);
-}
-div.ol-zoom:hover {
-  background-color: rgba(0,0,0,0);
-}
-
-.ol-control {
+  .ol-control {
     position: absolute;
     background-color: #f8f8f1;
     border-radius: 0px;
     padding: 1px;
-
-}
-.ol-control button {
-    display: block;
-    margin: 1px;
-    padding: 0;
-    color: #F8F8F1;
-    font-size: 1.5em;
-    font-weight: 700;
-    text-decoration: none;
-    text-align: center;
-    height: 1.5em;
-    width: 1.5em;
-    line-height: .4em;
-    background-color: #00AED0;
-    border: none;
   }
+
   .ol-attribution button, .ol-attribution ul {
     display: none;
   }
@@ -59,13 +34,10 @@ div.ol-zoom:hover {
     width: 100px;
     height: 100px;
     background-color: rgba(0,0,0,0);
-    background-image: url(nav-icons/instruction-regular.svg);
+    background-image: url(nav-icons/instructions.svg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
-  }
-  .instructions:hover {
-    background-image: url(nav-icons/instruction-hover.svg);
   }
 
   .reset {
@@ -76,18 +48,28 @@ div.ol-zoom:hover {
     width: 100px;
     height: 100px;
     background-color: rgba(0,0,0,.5);
-/*    background-image: url(nav-icons/instruction-regular.svg); */
+    /* background-image: url(nav-icons/instruction-regular.svg); */
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
   }
   .reset:hover {
-/*    background-image: url(nav-icons/instruction-hover.svg); */
+    /* background-image: url(nav-icons/instruction-hover.svg); */
   }
   .reset::after {
     content: "reset";
     color: #fff;
     font-size: 24px;
+  }
+
+  div.ol-zoom {
+    top: calc(50% - 100px);
+    left: auto;
+    right: .5em;
+    background-color: rgba(0,0,0,0);
+  }
+  div.ol-zoom:hover {
+    background-color: rgba(0,0,0,0);
   }
 
   button.ol-zoom-in, button.ol-zoom-in:focus {
@@ -148,11 +130,11 @@ div.ol-zoom:hover {
 
   .ol-compass {
     position: absolute;
-    top: 25px;
-    left: 28px;
+    top: 30px;
+    left: 33px;
     text-indent: 1000em;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: rgba(0,0,0,0);
     background-image: url(nav-icons/arrow.svg);
     background-repeat: no-repeat;
