--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body { width:100%; height:100%; background: #F8F8F1; }
     position: absolute;
     z-index: 100;
     bottom: 10px;
-    right: 10px;
+    left: 120px;
     width: 100px;
     height: 100px;
     background-color: rgba(0,0,0,0);
@@ -43,27 +43,23 @@ body { width:100%; height:100%; background: #F8F8F1; }
   .reset {
     position: absolute;
     z-index: 100;
-    bottom: 140px;
-    right: 10px;
+    bottom: 10px;
+    left: 10px;
     width: 100px;
     height: 100px;
-    background-color: rgba(0,0,0,.5);
-    /* background-image: url(nav-icons/instruction-regular.svg); */
+    background-color: rgba(0,0,0,0);
+    background-image: url(nav-icons/reset-regular.svg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
   }
   .reset:hover {
-    /* background-image: url(nav-icons/instruction-hover.svg); */
-  }
-  .reset::after {
-    content: "reset";
-    color: #fff;
-    font-size: 24px;
+    background-image: url(nav-icons/reset-hover.svg);
   }
 
   div.ol-zoom {
-    top: calc(50% - 100px);
+    top: auto;
+    bottom: 10px;
     left: auto;
     right: .5em;
     background-color: rgba(0,0,0,0);
@@ -130,11 +126,11 @@ body { width:100%; height:100%; background: #F8F8F1; }
 
   .ol-compass {
     position: absolute;
-    top: 30px;
+    top: 33px;
     left: 33px;
     text-indent: 1000em;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     background-color: rgba(0,0,0,0);
     background-image: url(nav-icons/arrow.svg);
     background-repeat: no-repeat;
