--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body { width:100%; height:100%; background: #F8F8F1; }
     height: 100px;
   }
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     button.ol-rotate-reset,
     button.ol-zoom-out,
     button.ol-zoom-in,
@@ -137,7 +137,7 @@ body { width:100%; height:100%; background: #F8F8F1; }
     }
 
     div.instructions {
-      left: 80px;
+      display: none;
     }
   }
 
